--- a/app/views/admins/book_checkout.html.erb
+++ b/app/views/admins/book_checkout.html.erb
@@ -18,11 +18,11 @@
         <td><%= first_available_inventory(reading_list.book_id).id %></td>
         <td><%= reading_list.customer_id %></td>
         <td><%= first_available_inventory(reading_list.book_id).condition %></td>
-        <td>
+        <td id="<%= reading_list.id %>">
           <%= form_tag(checkout_book_path, method: "POST", remote: true) do %>
           <%= hidden_field_tag(:reading_list_id, reading_list.id) %>
           <%= hidden_field_tag(:book_id, reading_list.book_id) %>
-          <%= submit_tag("Mark as sent to customer", class: "small button") %>
+          <%= submit_tag("Mark as sent to customer", class: "small button checkout_button", id: reading_list.id) %>
           <% end %>
         </td>
       </tr>
@@ -33,3 +33,12 @@
 </div>
 
 <h3 style="text-align: center;"><%= will_paginate @reading_list %></h3>
+
+<script type="text/javascript">
+  $(".checkout_button").on("click", function(event){
+    alert("herro");
+  });
+</script>
+
+
+
