--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1309,6 +1309,11 @@ $topbar-bg: #212D48 !default;
   margin: auto;
 }
 
+.percent_60_center {
+  width: 60%;
+  margin: auto;
+}
+
 .percent_50_center {
   width: 50%;
   margin: auto;
