--- a/app/views/admins/edit.html.erb
+++ b/app/views/admins/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing admin</h1>
+<div class="percent_50_center">
+  <h1>Editing admin</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @admin %> |
-<%= link_to 'Back', admins_path %>
+  <%= link_to 'Show', @admin %> |
+  <%= link_to 'Back', admins_path %>
+</div>
