--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -24,6 +24,6 @@
     <%= f.text_area :description, class: "book_description" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "small button success" %>
   </div>
 <% end %>
