--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,7 +1,7 @@
 <nav class="top-bar">
   <ul class="title-area">
     <li class="name">
-      <h1><%= link_to "2ndBookshelf", root_path %></a></h1>
+      <h1><%= link_to "2ndBookshelf", "#" %></a></h1>
     </li>
   </ul>
 
@@ -26,26 +26,27 @@
       <% if current_admin %>
         <li class="has-dropdown"><%= link_to "Admin", admins_path %>
           <ul class="dropdown">
-            <li><%= link_to "Create a new Book", new_book_path %></li>
+            <li><%= link_to "New Book", new_book_path %></li>
             <li><%= link_to "All Books", admin_books_path %></li>
+            <li><%= link_to "Customers", customers_path %></li>
             <li><%= link_to "Book Checkout", book_checkout_path %></li>
+            <li><%= link_to "Admin Logout", admin_logout_path %></li>
           </ul>
         </li>
         <li class="divider"></li>
-        <li><%= link_to "Customers", customers_path %></li>
       <% end %>
       <% if current_user %>
-        <li class="divider"></li>
+
         <li><%= link_to "Reading List", reading_list_path %></a></li>
         <li class="divider"></li>
         <li class="has-dropdown">
           <% if current_user.first_name != "" %>
-            <%= link_to current_user.first_name, customer_path(current_user) %>
+            <%= link_to current_user.first_name, "#" %>
           <% else %>
-            <%= link_to "Your Account", customer_path(current_user) %>
+            <%= link_to "Your Account", "#" %>
           <% end %>
           <ul class="dropdown">
-            <li><%= link_to "Your Account", customer_path(current_user) %></li>
+            <!--<li><%= link_to "Your Account", customer_path(current_user) %></li>-->
             <li class="divider"></li>
             <li><%= link_to "Logout", logout_path %></li>
           </ul>
@@ -56,22 +57,6 @@
         <li class="divider"></li>
         <li><%= link_to "Log In", login_path %></li>
       <% end %>
-
-      <!---
-      <li class="divider"></li>
-      <li class="has-form">
-        <form>
-          <div class="row collapse">
-            <div class="small-8 columns">
-              <input type="text">
-            </div>
-            <div class="small-4 columns">
-              <a href="#" class="alert button">Search</a>
-            </div>
-          </div>
-        </form>
-      </li>
-      -->
 
     </ul>
   </section>
