Books can now be checked in

--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -30,7 +30,7 @@
             <li><%= link_to "All Books", admin_books_path %></li>
             <li><%= link_to "Customers", customers_path %></li>
             <li><%= link_to "Book Checkout", book_checkout_path %></li>
-            <li><%= link_to "Book Checkin", "#" %></li>
+            <li><%= link_to "Book Checkin", book_check_in_path %></li>
             <li><%= link_to "Admin Logout", admin_logout_path %></li>
           </ul>
         </li>
