--- a/app/views/customers/reading_list.html.erb
+++ b/app/views/customers/reading_list.html.erb
@@ -19,7 +19,7 @@
     <div class="large-9 columns">
       <strong><%= book.name %></strong> by: <%= book.author %><br>
       <p>
-        <%= book.description[0..600] %>
+        <%= book.description[0..600]+"..." %>
       </p>
     </div>
     <hr />
@@ -39,7 +39,7 @@
     <div class="large-9 columns">
       <strong><%= book.name %></strong> by: <%= book.author %><br>
       <p>
-        <%= book.description[0..600] %>
+        <%= book.description[0..600]+"..." %>
       </p>
       <ul class="inline-list">
         <li><%= link_to "Remove from list", update_reading_list_path(book.id), method: "POST" %></a></li>
