--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   	<%= javascript_include_tag "https://js.stripe.com/v1/", "vendor/custom.modernizr" %>
     <%= csrf_meta_tags %>
     <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
+    <%= analytics_init if Rails.env.production? %>
   </head>
   <body>
 
