Changed link on top bar from # to books_path

--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,7 +1,7 @@
 <nav class="top-bar">
   <ul class="title-area">
     <li class="name">
-      <h1><%= link_to "2ndBookshelf", "#" %></a></h1>
+      <h1><%= link_to "2ndBookshelf", books_path %></a></h1>
     </li>
   </ul>
 
