Added prices to signup page

--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -43,10 +43,10 @@
         <%= f.text_field :zipcode %>
 
         <%= f.label :plan_id %>
-        <%= f.radio_button :plan_id, 1 %> One book.
-        <%= f.radio_button :plan_id, 2 %> Two books.<br>
-        <%= f.radio_button :plan_id, 3 %> Three books.
-        <%= f.radio_button :plan_id, 4 %> Four books.
+        <%= f.radio_button :plan_id, 1 %> One book. $11.00/month.<br>
+        <%= f.radio_button :plan_id, 2 %> Two books. $16.00/month.<br>
+        <%= f.radio_button :plan_id, 3 %> Three books. $21.00/month.<br>
+        <%= f.radio_button :plan_id, 4 %> Four books. $26.00/month.<br>
 
         <br>
 
