Added service area tag

--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -28,6 +28,8 @@
 
         <%= f.label :password_confirmation %>
         <%= f.password_field :password_confirmation %>
+
+        <p>Currently serving Atlanta, Ga. More locations coming soon.</p>
       </div>
       <div class="large-6 columns">
         <%= f.label :street_address %>
