--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
   	<%= javascript_include_tag "https://js.stripe.com/v1/", "vendor/custom.modernizr" %>
     <%= csrf_meta_tags %>
     <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
-    <%= analytics_init if Rails.env.production? %>
+    <link href="<%= image_path("favicon.ico") %>" rel="shortcut icon" />
+    <!-- <%= analytics_init if Rails.env.production? %> -->
   </head>
   <body>
 
