--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -9,6 +9,8 @@
     <!-- Left Nav Section -->
     <ul class="left">
       <li class="divider"></li>
+      <li><%= link_to "Blog", blog_path %></li>
+      <li class="divider"></li>
       <li><%= link_to "Books", books_path %></li>
       <li class="divider"></li>
       <li class="has-dropdown"><a href="#">Categories</a>
