--- a/app/views/customers_books_owneds/index.html.erb
+++ b/app/views/customers_books_owneds/index.html.erb
@@ -1,29 +1,9 @@
-<h1>Listing customers_books_owneds</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Customer</th>
-      <th>Book</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @customers_books_owneds.each do |customers_books_owned| %>
-      <tr>
-        <td><%= customers_books_owned.customer_id %></td>
-        <td><%= customers_books_owned.book_id %></td>
-        <td><%= link_to 'Show', customers_books_owned %></td>
-        <td><%= link_to 'Edit', edit_customers_books_owned_path(customers_books_owned) %></td>
-        <td><%= link_to 'Destroy', customers_books_owned, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<h1>Books Owned</h1>
+  <ul class="large-block-grid-4">
+    <% @books.each do |book| %>
+      <%= render partial: "books/book", :locals => {:book => book} %>
     <% end %>
-  </tbody>
-</table>
-
+  </ul>
 <br>
 
-<%= link_to 'New Customers books owned', new_customers_books_owned_path %>
+<h3 style="text-align: center;"><%= will_paginate @books_owned %></h3>
