--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -8,8 +8,8 @@
   <section class="top-bar-section">
     <!-- Left Nav Section -->
     <ul class="left">
-      <li class="divider"></li>
-      <li><%= link_to "Blog", blog_path %></li>
+      <!-- <li class="divider"></li> -->
+      <!-- <li><%= link_to "Blog", blog_path %></li> -->
       <li class="divider"></li>
       <li><%= link_to "Books", books_path %></li>
       <li class="divider"></li>
@@ -38,7 +38,9 @@
         </li>
         <li class="divider"></li>
       <% end %>
-      <% if current_user %>
+      <% if true %>
+
+      <% elsif current_user %>
 
         <li><%= link_to "Reading List", reading_list_path %></a></li>
         <li class="divider"></li>
