--- a/app/views/admins/get_new_books.html.erb
+++ b/app/views/admins/get_new_books.html.erb
@@ -1,3 +1,6 @@
 <h3>Search for new books via ISBNdb.com</h3>
 
-<%= @books.inspect %>
+<% @books.each do |book| %>
+  <%= book.inspect %>
+  <br>
+<% end %>
